@@ -10,9 +10,9 @@ plugins {
 }
 
 group 'com.fuzy.idea'
-version '1.0.11'
+version '1.0.12'
 
-sourceCompatibility = 11
+sourceCompatibility = 17
 
 repositories {
     mavenCentral()
@@ -20,14 +20,14 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    implementation 'com.yworks:yguard:2.10.0'
+    implementation 'com.yworks:yguard:4.0.0'
 }
 
 apply plugin: 'org.jetbrains.intellij'
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2022.2'
+    version '2022.3'
 }
 
 /**
@@ -50,7 +50,7 @@ patchPluginXml {
     changeNotes "${changeNotesHtml}"
     pluginDescription "${pluginDescriptionHtml}"
     sinceBuild '203.*'
-    untilBuild '222.*'
+    untilBuild '223.*'
 }
 
 ext {
@@ -111,5 +111,10 @@ jar.finalizedBy(project.tasks.obfuscate)
 
 runPluginVerifier {
     distributionFile jar.archiveFile.get().asFile.path.replace(".jar", "-obf.jar")
-    ideVersions(['IU-2022.2', 'IC-2022.2'])
+    ideVersions(['IU-2022.3', 'IC-2022.3'])
 }
+
+test {
+//    jvmArgs = ['--add-exports=java.desktop/sun.awt=ALL-UNNAMED', "--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"] //, '--add-opens=java.base/java.lang=ALL-UNNAMED'
+}
+
